--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 buildscript {
-    ext.app_compat_version = '1.3.0-rc01'
-    ext.core_version = '1.3.2'
+    ext.app_compat_version = '1.4.0-alpha01'
+    ext.core_version = '1.5.0'
     ext.constraint_layout_version = '2.0.4'
     ext.kotlin_version = '1.5.0'
     ext.lifecycle_ext_version = '2.2.0'
     ext.google_material_version = '1.3.0'
     ext.nav_version = '2.3.5'
-    ext.timber_version = '4.7.1'
 
     repositories {
         google()
